[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/World/Encounter.gd" type="Script" id=1]
[ext_resource path="res://assets/World/Encounter.png" type="Texture" id=2]
[ext_resource path="res://Scripts/World/EncounterData.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 13.9552

[node name="Encounter" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionBox" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="EncounterData" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Slot1" type="Node" parent="EncounterData"]

[node name="Slot2" type="Node" parent="EncounterData"]

[node name="Slot3" type="Node" parent="EncounterData"]

[node name="Slot4" type="Node" parent="EncounterData"]

[node name="Slot5" type="Node" parent="EncounterData"]

[node name="Slot6" type="Node" parent="EncounterData"]

[node name="AllyCommander" type="Node" parent="EncounterData"]

[node name="EnemyCommander" type="Node" parent="EncounterData"]
